--- a/src/scss/components/_list-container.scss
+++ b/src/scss/components/_list-container.scss
@@ -1,5 +1,6 @@
 .list_container {
   display: flex;
+  min-height: 400px;
   flex-direction: column;
   justify-content: center;
   h2 {
@@ -12,6 +13,7 @@
     display: flex;
     flex-wrap: wrap;
     width: 90%;
+    min-height: 200px;
     gap: 1rem;
     justify-content: start;
     align-self: center;
