--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,9 +1,12 @@
+/*
+    UTILS
+*/
 @import url(https://fonts.googleapis.com/css?family=Russo+One:regular);
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 html {
   font-family: Roboto;
 }
-html .brand {
+html .brand, html .title {
   font-family: "Russo One";
 }
 
@@ -13,12 +16,19 @@ body {
   background-color: #3c3c3c;
 }
 
+/*
+    COMPONENTS
+*/
 .brand {
   font-size: 30px;
   font-weight: bold;
   cursor: pointer;
   color: #f2be22;
-  filter: drop-shadow(0 0 0.75rem #d97d0d);
+  filter: drop-shadow(0 0 0.65rem #d97d0d);
+  transition: filter 0.1s ease-in-out;
+}
+.brand:hover {
+  filter: drop-shadow(0 0 0.85rem #d97d0d);
 }
 
 a {
@@ -38,9 +48,13 @@ a {
   color: #f2be22;
   text-decoration: none;
   cursor: pointer;
+  transition: filter 0.1s ease-in-out;
 }
 a img {
   width: 30px;
+}
+a:hover {
+  filter: drop-shadow(0 0 0.35rem #f2be22);
 }
 
 .info__button {
@@ -55,6 +69,14 @@ a img {
 .info__button img {
   width: 8px !important;
   border-radius: 0 !important;
+}
+
+.buy_credit_card__button {
+  border-color: #008a00;
+  color: #00FF00;
+}
+.buy_credit_card__button:hover {
+  filter: drop-shadow(0 0 0.35rem #00FF00);
 }
 
 .default_card {
@@ -124,7 +146,7 @@ a img {
 }
 .default_card .images__side img {
   width: 250px;
-  height: 354px;
+  height: 350px;
   object-fit: cover;
 }
 
@@ -167,6 +189,7 @@ a img {
 
 .list_container {
   display: flex;
+  min-height: 400px;
   flex-direction: column;
   justify-content: center;
 }
@@ -180,13 +203,320 @@ a img {
   display: flex;
   flex-wrap: wrap;
   width: 90%;
+  min-height: 200px;
   gap: 1rem;
   justify-content: start;
   align-self: center;
 }
 
-header {
+.loading_screen__container {
+  position: relative;
+  min-width: 100% !important;
+  min-height: inherit !important;
+}
+.loading_screen__container .loading_screen {
+  display: flex;
+  position: absolute;
+  max-width: 50px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.loading_screen__container .loading_screen .square {
+  align-self: center;
+  padding: 20px 20px;
+  border-style: solid;
+  border-radius: 5px;
+  border-color: #f2be22;
+}
+.loading_screen__container .loading_screen .icon {
+  position: absolute;
+  align-self: center;
+  z-index: 5;
+  color: #f2be22;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.loading_screen__container .loading_screen .dots__default {
+  min-width: 50px;
+}
+.loading_screen__container .loading_screen .dot {
+  position: absolute;
+  align-self: center;
+  padding: 0px;
+  border-radius: 50%;
+  background-color: #f2be22;
+  bottom: -40%;
+  left: 50%;
+  transform: translate(-50%, 40%);
+}
+.loading_screen__container .loading_screen .dot__1 {
+  left: 15%;
+  animation-duration: 0.3s;
+  animation-name: dot_animation;
+  animation-delay: 0.1s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+.loading_screen__container .loading_screen .dot__2 {
+  animation-duration: 0.3s;
+  animation-name: dot_animation;
+  animation-delay: 0.2s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+.loading_screen__container .loading_screen .dot__3 {
+  left: 85%;
+  animation-duration: 0.3s;
+  animation-name: dot_animation;
+  animation-delay: 0.3s;
+  animation-iteration-count: infinite;
+  animation-direction: alternate;
+}
+
+@keyframes dot_animation {
+  0% {
+    padding: 1px;
+  }
+  25% {
+    padding: 2px;
+  }
+  50% {
+    padding: 3px;
+  }
+  75% {
+    padding: 4px;
+  }
+  100% {
+    padding: 5px;
+  }
+}
+.item_detail__container {
+  min-height: 500px;
+  padding-top: 3rem;
+}
+.item_detail__container .item_info_container {
+  display: grid;
+  grid-template-columns: 50% auto;
+}
+.item_detail__container .item_info_container .item_banner__slider {
+  display: flex;
+  justify-content: center;
+}
+.item_detail__container .item_info_container .item_banner__slider img {
+  width: 600px;
+  height: 700px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+.item_detail__container .item_info_container .item__info {
+  position: relative;
+}
+.item_detail__container .item_info_container .item__info .title {
+  color: #f2be22;
+}
+.item_detail__container .item_info_container .item__info h1 {
+  font-size: 45px;
+  padding-left: 30px;
+  color: #f2be22;
+}
+.item_detail__container .item_info_container .item__info .owner {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+  padding: 30px 0;
+}
+.item_detail__container .item_info_container .item__info .owner p {
+  color: ghostwhite;
+  font-weight: bold;
+  font-size: 25px;
+  margin-top: 0;
+}
+.item_detail__container .item_info_container .item__info .owner img {
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  filter: drop-shadow(0 0 0.35rem #f2be22);
+}
+.item_detail__container .item_info_container .item__info .description {
+  padding: 10px 0;
+}
+.item_detail__container .item_info_container .item__info .description .description__content {
+  color: ghostwhite;
+  margin-left: 2rem;
+}
+.item_detail__container .item_info_container .item__info .prizes {
+  color: ghostwhite;
+}
+.item_detail__container .item_info_container .item__info .prizes .prize {
+  padding-left: 2rem;
+  margin: 2px 0;
+}
+.item_detail__container .item_info_container .item__info .prizes .legendary_prize {
+  color: #ffe600;
+  filter: drop-shadow(0 0 0.35rem #ffe600);
+}
+.item_detail__container .item_info_container .item__info .prizes .epic_prize {
+  color: #bd009a;
+  filter: drop-shadow(0 0 0.35rem #bd009a);
+}
+.item_detail__container .item_info_container .item__info .prizes .rare_prize {
+  color: #cf7f00;
+  filter: drop-shadow(0 0 0.35rem #cf7f00);
+}
+.item_detail__container .item_info_container .item__info .prizes .common_prize {
+  color: #9c9c9c;
+  filter: drop-shadow(0 0 0.35rem #9c9c9c);
+}
+.item_detail__container .item_info_container .item__info .bottom {
+  position: absolute;
+  bottom: 0;
+}
+.item_detail__container .item_info_container .item__info .item__warnings {
+  color: orangered;
+  font-weight: bold;
+}
+.item_detail__container .item_info_container .item__info .item__buttons {
+  display: flex;
+  gap: 20px;
+}
+
+.newsletter__container {
+  display: grid;
+  grid-template-rows: 20% 80%;
+  border-style: solid;
+  border-color: black;
+  background: linear-gradient(180deg, #26231c 0%, #615947 74%);
+  height: 500px;
+  max-height: 90%;
+  width: 400px;
+  align-self: center;
+  justify-items: center;
+}
+.newsletter__container .title p {
+  font-family: "Russo One";
+  color: #f2be22;
+  font-size: 30px;
+  text-align: center;
+  font-weight: bold;
+}
+.newsletter__container .content {
+  justify-content: center;
+  color: ghostwhite;
+  width: 90%;
+  min-height: 100%;
+  overflow: auto;
+}
+
+.news {
+  margin: 10px 0;
+  border-style: solid;
+  border-color: #f2a81d;
+  border-radius: 7px;
+  overflow: hidden;
+}
+.news .heading {
+  display: flex;
+  color: ghostwhite !important;
+  gap: 15px;
+  padding: 0 10px;
+  font-weight: bold;
+}
+.news .heading .version {
+  color: #d97d0d;
+}
+.news .content {
+  margin: 0 auto;
+}
+.news .author {
+  padding-right: 10px;
+  float: right;
+}
+
+.welcome__board {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 3rem;
+  gap: 15rem;
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.4470588235) 0%, rgba(0, 0, 0, 0.4705882353) 0%), url("welcome.png");
+  background-attachment: fixed;
+  background-size: cover;
+  min-height: 550px;
+}
+.welcome__board .main__content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100%;
+}
+.welcome__board .heading {
+  color: #f2be22;
+  position: relative;
+}
+.welcome__board .heading h1 {
+  font-size: 55px;
+  padding-top: 40px;
+  margin: 0;
+}
+.welcome__board .heading h1 span {
+  font-size: inherit;
+}
+.welcome__board .heading h2 {
+  margin-top: -10px;
+}
+.welcome__board .explore {
+  display: flex;
+  gap: 2rem;
+  margin-bottom: 8rem;
+}
+.welcome__board .explore .search__bar {
+  display: flex;
+  position: relative;
+  height: 100%;
+}
+.welcome__board .explore .search__bar img {
+  position: absolute;
+  top: 50%;
+  left: 5%;
+  transform: translate(-5%, -50%);
+  height: 100%;
+  width: 25px;
+  z-index: 2;
+}
+.welcome__board .explore .search__bar input {
+  width: 30%;
+  padding: 0 70px;
+  background: transparent;
+  border-color: #f2a81d;
+  border-radius: 50px;
+  border-width: 3px;
+  border-style: solid;
+  color: ghostwhite;
+  font-weight: bold;
+  font-size: large;
+  transition: filter 0.4s ease-in-out, width 0.4s ease-in-out;
+}
+.welcome__board .explore .search__bar input::placeholder {
+  color: ghostwhite;
+  font-weight: bold;
+  font-size: large;
+}
+.welcome__board .explore .search__bar input:focus {
+  width: 90%;
+  outline: none;
+  filter: drop-shadow(0 0 0.35rem #f2be22);
   background-color: #26231c;
+}
+
+/*
+    LAYOUT
+*/
+header {
+  position: sticky;
+  top: 0;
+  background-color: #26231c;
+  z-index: 200;
 }
 header nav {
   padding: 0 20px;
@@ -199,5 +529,12 @@ header nav div {
   align-self: center;
   gap: 15px;
 }
+header nav .options {
+  padding-left: 20px;
+}
+
+/*
+    VIEWS
+*/
 
 /*# sourceMappingURL=App.css.map */
