--- a/src/scss/components/_newsletter.scss
+++ b/src/scss/components/_newsletter.scss
@@ -10,12 +10,17 @@
     align-self: center;
     justify-items: center;
     .title {
+        width: 100%;
         p {
+            margin: 20px 0;
             font-family: 'Russo One';
             color: map-get($map: $main-theme, $key: titles);
             font-size: 30px;
             text-align: center;
             font-weight: bold;
+        }
+        .line {
+            @include line(10px);
         }
     }
     .content {
