--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -16,6 +16,14 @@ body {
   background-color: #3c3c3c;
 }
 
+.line {
+  margin: 50px auto;
+  width: 80%;
+  min-height: 3px;
+  border: none;
+  background: linear-gradient(270deg, rgba(60, 60, 60, 0.599877451) 0%, rgb(242, 190, 34) 50%, rgba(60, 60, 60, 0.6) 100%);
+}
+
 /*
     COMPONENTS
 */
@@ -194,6 +202,7 @@ a:hover {
   justify-content: center;
 }
 .list_container h2 {
+  margin: 0px 0 25px 0;
   font-size: 35px;
   color: #f2be22;
   width: 80%;
@@ -295,6 +304,15 @@ a:hover {
 .item_detail__container {
   min-height: 500px;
   padding-top: 3rem;
+  border-style: solid;
+  border-width: 3px;
+  padding: 20px;
+  border-color: #f2a81d;
+  background-image: linear-gradient(180deg, rgba(255, 255, 255, 0.5803921569) 0%, rgba(0, 0, 0, 0.831372549) 0%), url("/public/detail.png");
+  background-size: cover;
+  border-radius: 5px;
+  width: 90%;
+  margin: 20px auto;
 }
 .item_detail__container .item_info_container {
   display: grid;
@@ -394,12 +412,23 @@ a:hover {
   align-self: center;
   justify-items: center;
 }
+.newsletter__container .title {
+  width: 100%;
+}
 .newsletter__container .title p {
+  margin: 20px 0;
   font-family: "Russo One";
   color: #f2be22;
   font-size: 30px;
   text-align: center;
   font-weight: bold;
+}
+.newsletter__container .title .line {
+  margin: 10px auto;
+  width: 80%;
+  min-height: 3px;
+  border: none;
+  background: linear-gradient(270deg, rgba(60, 60, 60, 0.599877451) 0%, rgb(242, 190, 34) 50%, rgba(60, 60, 60, 0.6) 100%);
 }
 .newsletter__container .content {
   justify-content: center;
@@ -503,7 +532,7 @@ a:hover {
   font-size: large;
 }
 .welcome__board .explore .search__bar input:focus {
-  width: 90%;
+  width: 300px;
   outline: none;
   filter: drop-shadow(0 0 0.35rem #f2be22);
   background-color: #26231c;
