--- a/src/scss/layout/_header.scss
+++ b/src/scss/layout/_header.scss
@@ -18,3 +18,10 @@ header {
         }
     }
 }
+
+.active {
+    .title {
+        background-color: aquamarine;
+    }
+    filter: map-get($map: $main-theme, $key: esp-brand-drop-shadow);
+}
