--- a/src/scss/components/_loading-screen.scss
+++ b/src/scss/components/_loading-screen.scss
@@ -19,12 +19,14 @@
 
     .icon {
       position: absolute;
+      text-align: center;
       align-self: center;
       z-index: 5;
       color: map-get($map: $loading-screen, $key: items);
       top: 50%;
       left: 50%;
       transform: translate(-50%, -50%);
+      font-size: 30px;
     }
 
     .dots__default {
