--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,9 +5,13 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
 html {
   font-family: Roboto;
+  scroll-behavior: smooth;
 }
-html .brand, html .title {
+html .brand, html .nav_brand, html .title {
   font-family: "Russo One";
+}
+html * {
+  -webkit-user-drag: none;
 }
 
 body {
@@ -27,19 +31,22 @@ body {
 /*
     COMPONENTS
 */
-.brand {
+.nav_brand {
   font-size: 30px;
   font-weight: bold;
+  border: none;
+  background: none;
   cursor: pointer;
+  text-decoration: none;
   color: #f2be22;
-  filter: drop-shadow(0 0 0.65rem #d97d0d);
-  transition: filter 0.1s ease-in-out;
-}
-.brand:hover {
-  filter: drop-shadow(0 0 0.85rem #d97d0d);
+  transition: filter 0.4s ease-in-out;
 }
 
-a {
+.brand {
+  filter: drop-shadow(0 0 0.65rem #d97d0d);
+}
+
+.button {
   display: flex;
   height: 50px;
   width: 200px;
@@ -58,10 +65,10 @@ a {
   cursor: pointer;
   transition: filter 0.1s ease-in-out;
 }
-a img {
+.button img {
   width: 30px;
 }
-a:hover {
+.button:hover {
   filter: drop-shadow(0 0 0.35rem #f2be22);
 }
 
@@ -158,7 +165,7 @@ a:hover {
   object-fit: cover;
 }
 
-.active {
+.card_active {
   border-color: #d68227 !important;
   transform: rotateY(180deg);
 }
@@ -240,12 +247,14 @@ a:hover {
 }
 .loading_screen__container .loading_screen .icon {
   position: absolute;
+  text-align: center;
   align-self: center;
   z-index: 5;
   color: #f2be22;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  font-size: 30px;
 }
 .loading_screen__container .loading_screen .dots__default {
   min-width: 50px;
@@ -560,6 +569,13 @@ header nav div {
 }
 header nav .options {
   padding-left: 20px;
+}
+
+.active {
+  filter: drop-shadow(0 0 0.65rem #d97d0d);
+}
+.active .title {
+  background-color: aquamarine;
 }
 
 /*
