--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -62,9 +62,10 @@
         overflow: hidden;
         position: absolute;
         justify-content: center;
+        height: 100%;
         img {
-            width: 250px;
-            height: 350px;
+            width: 100%;
+            height: 100% !important;
             object-fit:cover;
         }
         backface-visibility: hidden !important;
