--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -157,11 +157,12 @@ body {
   overflow: hidden;
   position: absolute;
   justify-content: center;
+  height: 100%;
   backface-visibility: hidden !important;
 }
 .default_card .images__side img {
-  width: 250px;
-  height: 350px;
+  width: 100%;
+  height: 100% !important;
   object-fit: cover;
 }
 
