--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -17,6 +17,7 @@
 @import './components/item-detail';
 @import './components/newsletter';
 @import './components/welcome';
+@import './components/cart';
 /*
     LAYOUT
 */
